<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:fontFamily="sans-serif-thin"
            android:text="ShareIt"
            android:textColor="#fff"
            android:textSize="28dp" />

        <ImageView
            android:layout_width="230dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:padding="0dp"
            android:src="@drawable/mop" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_name"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Username"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_name"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Confirm password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#fff" />

            <Button
                android:id="@+id/signupButton"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/button1_background"
                android:clickable="true"
                android:padding="0dp"
                android:text="SIGN UP"
                android:textAllCaps="false"
                android:textColor="@color/colorBodyDarker"
                android:textSize="16dp" />

            <Button
                android:id="@+id/signinTextView"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button2_background"
                android:clickable="true"
                android:padding="0dp"
                android:text="I HAVE ALREADY ACCOUNT, LOG IN"
                android:textAllCaps="false"
                android:textColor="@color/colorBodyBrighter"
                android:textSize="16dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>